--- a/collectr/package.json
+++ b/collectr/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
+    "redux-thunk": "^2.2.0",
+    "thunk": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
