--- a/collectr/package.json
+++ b/collectr/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.79.1",
     "thunk": "0.0.1"
   },
   "scripts": {
