--- a/collectr/package.json
+++ b/collectr/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "carousel": "0.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-dropdown": "^1.4.2",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.80.0",
+    "slick": "^1.12.2",
     "thunk": "0.0.1"
   },
   "scripts": {
