--- a/collectr/package.json
+++ b/collectr/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.3.2",
     "react-dropdown": "^1.4.2",
     "react-model-presenter": "^1.0.0-beta.18",
+    "react-pixelify": "^0.1.1",
     "react-redirect": "^1.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
